--- a/android-client/app/src/main/res/values/strings.xml
+++ b/android-client/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AWS Cognito</string>
+    <!-- Google Sign-In Web Client ID (OAuth 2.0 Client ID from Google Cloud Console) -->
+    <!-- This should be the "Web application" type client ID, not Android -->
+    <string name="google_web_client_id">670999433286-rchnsgi0krm5g47hpflr7mg2pv8209jh.apps.googleusercontent.com</string>
 </resources>
